# src/main/java/com/nttdatabc/mscuentabancaria/model/AuthorizedSignerExt.java
@@ -1,0 +1,16 @@
+package com.nttdatabc.mscuentabancaria.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class AuthorizedSignerExt {
+    private String dni;
+
+    private String fullname;
+
+    private String cargo;
+}
