# src/main/resources/swagger/ms-cuentaBancaria_swagger.yaml
@@ -10,7 +10,7 @@ info:
   license:
     name: Licencia MIT
     url: https://www.example.com/license
-servers: 
+servers:
   - url: http://localhost:8080/api/v1
 
 paths:
@@ -106,6 +106,33 @@ paths:
         '404':
           description: Recurso no encontrado
 
+  /accounts/customer/{customer_id}:
+    get:
+      operationId: getAccountsByCustomerId
+      summary: Obtener cuentas bancarias por cliente
+      tags:
+        - Cuentas Bancarias
+      parameters:
+        - name: customer_id
+          in: path
+          description: ID del cliente
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Detalle de cuenta bancaria obtenido exitosamente
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Account'
+        '400':
+          description: Error en request
+        '404':
+          description: Recurso no encontrado
+
   /movement/deposit:
     post:
       operationId: createMovementDeposit
@@ -168,7 +195,7 @@ paths:
                   $ref: '#/components/schemas/Movement'
         '400':
           description: Error en request
-        '404': 
+        '404':
           description: Recurso no encontrado
 
 components:
@@ -178,10 +205,12 @@ components:
       properties:
         _id:
           type: string
-        customers_id:
+        customer_id:
+          type: string
+        holders:
           type: array
           items:
-            $ref: '#/components/schemas/CustomersHolders'
+            $ref: '#/components/schemas/Holders'
         type_account:
           type: string
         current_balance:
@@ -205,8 +234,10 @@ components:
           type: number
         fecha:
           type: string
-    CustomersHolders:
+    Holders:
       type: object
       properties:
-        customer_id:
+        dni:
+          type: string
+        fullname:
           type: string
